# FAST

./: .gitignore  README.md  release.py  reparameter.py  test.py  test_all.py  train.py  visualize.py
config/fast/: README.md
config/fast/ctw/: fast_base_ctw_512_finetune_ic17mlt.py  fast_base_ctw_640_finetune_ic17mlt.py  fast_small_ctw_512_finetune_ic17mlt.py  fast_tiny_ctw_512_finetune_ic17mlt.py
config/fast/ic15/: fast_base_ic15_1280_finetune_ic17mlt.py  fast_base_ic15_736_finetune_ic17mlt.py  fast_base_ic15_896_finetune_ic17mlt.py  fast_small_ic15_736_finetune_ic17mlt.py  fast_tiny_ic15_736_finetune_ic17mlt.py
config/fast/ic17mlt/: fast_base_ic17mlt_640.py  fast_small_ic17mlt_640.py  fast_tiny_ic17mlt_640.py
config/fast/msra/: fast_base_msra_736_finetune_ic17mlt.py  fast_small_msra_736_finetune_ic17mlt.py  fast_tiny_msra_512_finetune_ic17mlt.py  fast_tiny_msra_736_finetune_ic17mlt.py
config/fast/tt/: fast_base_tt_512_finetune_ic17mlt.py  fast_base_tt_640_finetune_ic17mlt.py  fast_base_tt_800_finetune_ic17mlt.py  fast_small_tt_512_finetune_ic17mlt.py  fast_small_tt_640_finetune_ic17mlt.py  fast_tiny_tt_448_finetune_ic17mlt.py  fast_tiny_tt_512_finetune_ic17mlt.py  fast_tiny_tt_640_finetune_ic17mlt.py
dataset/: README.md  __init__.py  dataloader.py  utils.py
dataset/fast/: __init__.py  fast_ctw.py  fast_ic15.py  fast_ic17mlt.py  fast_msra.py  fast_synth.py  fast_tt.py
dataset/pan/: pan_ctw.py  pan_ic15.py  pan_msra.py  pan_synth.py  pan_tt.py
dataset/psenet/: __init__.py  psenet_ctw.py  psenet_synth.py  psenet_tt.py
eval/: eval_ctw.sh  eval_msra.sh  readme.md
eval/ctw/: eval.py
eval/ic15/: script.py.bak
eval/tt/: Deteval.py  Deteval_New.py
logs/ctw/: fast_base_ctw_512_finetune_ic17mlt.txt  fast_base_ctw_640_finetune_ic17mlt.txt  fast_small_ctw_512_finetune_ic17mlt.txt  fast_tiny_ctw_512_finetune_ic17mlt.txt
logs/ic15/: fast_base_ic15_1280_finetune_ic17mlt.txt  fast_base_ic15_736_finetune_ic17mlt.txt  fast_base_ic15_896_finetune_ic17mlt.txt  fast_small_ic15_736_finetune_ic17mlt.txt  fast_tiny_ic15_736_finetune_ic17mlt.txt
logs/ic17mlt/: fast_base_ic17mlt_640.txt  fast_small_ic17mlt_640.txt  fast_tiny_ic17mlt_640.txt
logs/msra/: fast_base_msra_736_finetune_ic17mlt.txt  fast_small_msra_736_finetune_ic17mlt.txt  fast_tiny_msra_512_finetune_ic17mlt.txt  fast_tiny_msra_736_finetune_ic17mlt.txt
logs/tt/: fast_base_tt_512_finetune_ic17mlt.txt  fast_base_tt_640_finetune_ic17mlt.txt  fast_base_tt_800_finetune_ic17mlt.txt  fast_small_tt_512_finetune_ic17mlt.txt  fast_small_tt_640_finetune_ic17mlt.txt  fast_tiny_tt_448_finetune_ic17mlt.txt  fast_tiny_tt_512_finetune_ic17mlt.txt  fast_tiny_tt_640_finetune_ic17mlt.txt
models/: __init__.py  fast.py  pan.py  psenet.py
models/backbone/: __init__.py  resnet.py  textnet.py
models/head/: __init__.py  fast_head.py  pa_head.py  psenet_head.py
models/loss/: __init__.py  emb_loss_v1.py  emb_loss_v2.py
models/neck/: __init__.py  fast_neck.py  fpem_v1.py  fpem_v2.py  fpn.py
models/post_processing/: __init__.py
models/post_processing/ccl/: __init__.py  setup.py  test.py
models/utils/: __init__.py  conv_bn_relu.py  generate_bbox.py  nas_utils.py  rep_model_convert.py
tensorrt/dbnet/: CMakeLists.txt  dbnet.cpp
tensorrt/fast/: CMakeLists.txt  README.md  ccl.h  ccl_cuda.cu  fast.cpp  gen_wts.py
tensorrt/psenet/: CMakeLists.txt  gen_tf_wts.py  layers.cpp  main.cpp  psenet.cpp  psenet.h  utils.cpp  utils.h
utils/: __init__.py  ema.py  reparameter.py  result_format.py
(+2 files in other folders)
